--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,7 @@ serde_json = "1.0"
 serde_derive = "1.0"
 difference = "2.0"
 url = "2.2"
-colored = "2.0"
-cli-table = "0.4"
+csv = "1.1"
 
 [dev-dependencies]
 mockito = "0.10"
