--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -27,4 +27,4 @@ jobs:
       - name: "Set Tag"
         shell: "bash"
         run: |
-          git tag v${{ steps.get-tag.outputs.PKG_VERSION }} && git push --tags
+          git tag v${{ steps.get-tag.outputs.PKG_VERSION }} && git push --tags || true
