Change the tag workflow to use a deploy key

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -16,7 +16,7 @@ jobs:
       - name: "Check out the repo"
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.GH_IAM_CAPABLE_SSH_PRIVATE_KEY }}
 
       - name: "Get tag"
         id: "get-tag"
